Fixing bug 400366. Prefix 'Prototype' and 'Constructor' with 'DOM' to avoid conflicting with code on the web. r+sr=peterv@propagandism.org